# data-cutter

./: README.md  build.sh  pyproject.toml
examples/: .env.example  config.py  prompt_example1.ipynb  prompt_template_example.ipynb  schema_example1.ipynb  schema_example2.ipynb
examples/input_data/: example1.json
examples/prompts/: example1.yaml
examples/schemas/: example2.json
examples/tasks/table_extraction/: generation_config.json  input_example.json  output_schema.json  prompt_template.yaml
src/data-cutter-demo/: README.md  build.sh  server.py
src/data_cutter/: __init__.py  loader.py  task_loader.py
src/data_cutter/formatter/: __init__.py  anthropic.py  base.py  openai.py
src/data_cutter/loader/: __init__.py  prompt_loader.py  schema_loader.py
src/data_cutter/model_maker/: __init__.py  dtypes.py  maker.py
src/data_cutter/schema_maker/: __init__.py  maker.py
src/data_cutter/template_formatter/: __init__.py  formatter.py  message_converter.py
src/data_cutter/types/: generation_config.py  model_params.py  model_specification.py  output_schema.py  schema.py  task.py
src/data_cutter/types/image/: bbox.py  file.py
src/data_cutter/types/llms/openai/: response_format.py
src/data_cutter/types/prompt/: __init__.py  content.py  template.py
src/data_cutter/types/prompt_template/: __init__.py  template.py
src/data_cutter/utils/: image.py  text.py
src/model_builder_demo/: README.md  builder.py  index.html  requirements.txt
